--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,15 +47,14 @@ outputs:
         - ply >=3.9
         - colorama >=0.3.9
         - configobj >=5.0.6
-        - gitpython >=2.1.8
+        - gitpython >3
         - dulwich >=0.20.21
         - pygit2 >=1.5.0
-        - gitdb2 >=2.0.6
         - setuptools >=34.0.0
         - nanotime >=0.5.2
         - pyasn1 >=0.4.1
         - voluptuous >=0.11.7
-        - jsonpath-ng >=1.4.3
+        - jsonpath-ng >=1.5.1
         - requests >=2.22.0
         - grandalf ==0.6
         - distro >=1.3.0
@@ -74,27 +73,26 @@ outputs:
         - networkx >=2.1
         - psutil >=5.8.0
         - pydot >=1.2.4
-        - dataclasses  # [py<37]
+        - dataclasses ==0.7  # [py<37]
         - flatten-dict >=0.3.0,<1
         - tabulate >=0.8.7
         - pygtrie ==2.3.2
-        - dpath >=1.4.2
-        - shtab >=1.3.2,<2
+        - dpath >=2.0.1,<3
+        - shtab >=1.3.4,<2
         - rich >=10.0.0
-        - dictdiffer>=0.8.1
+        - dictdiffer >=0.8.1
         - python-benedict >=0.21.1
         - pyparsing ==2.4.7
         - typing_extensions >=3.7.4
         - fsspec >=0.8.5
         - diskcache >=5.2.1
+        - importlib-metadata  # Undeclared upstream dependency
 
   - name: dvc-gs
     test:
       requires:
         - git
         - pip
-        - ujson  # Undeclared upstream dependency
-        - importlib-metadata  # Undeclared upstream dependency
       imports:
         - dvc
       commands:
@@ -108,14 +106,14 @@ outputs:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
         - gcsfs >=0.7.2
+        - ujson  # Undeclared upstream dependency
+        - importlib-metadata  # Undeclared upstream dependency
 
   - name: dvc-gdrive
     test:
       requires:
         - git
         - pip
-        - ujson  # Undeclared upstream dependency
-        - importlib-metadata  # Undeclared upstream dependency
       imports:
         - dvc
       commands:
@@ -129,6 +127,8 @@ outputs:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
         - pydrive2 >=1.8.1
+        - ujson  # Undeclared upstream dependency
+        - importlib-metadata  # Undeclared upstream dependency
 
   - name: dvc-s3
     test:
@@ -148,6 +148,7 @@ outputs:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
         - boto3 >=1.9.201
+        - importlib-metadata  # Undeclared upstream dependency
 
   - name: dvc-azure
     test:
@@ -169,6 +170,7 @@ outputs:
         - adlfs >=0.7.0
         - azure-identity >=1.4.0
         - knack
+        - importlib-metadata  # Undeclared upstream dependency
 
   - name: dvc-oss
     test:
@@ -188,7 +190,8 @@ outputs:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
         - oss2 >=2.11.0
-
+        - importlib-metadata  # Undeclared upstream dependency
+	
   - name: dvc-ssh
     test:
       requires:
@@ -209,13 +212,13 @@ outputs:
         - paramiko >=2.7.0
         # for paramiko, see https://github.com/iterative/dvc/issues/4589
         - invoke >=1.3
+        - importlib-metadata  # Undeclared upstream dependency
 
   - name: dvc-hdfs
     test:
       requires:
         - git
         - pip
-        - importlib-metadata  # Undeclared upstream dependency
       imports:
         - dvc
       commands:
@@ -229,6 +232,7 @@ outputs:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
         - pyarrow >=0.17.1
+        - importlib-metadata  # Undeclared upstream dependency
 
   - name: dvc-webhdfs
     test:
@@ -248,6 +252,7 @@ outputs:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
         - python-hdfs >=2.5.7
+        - importlib-metadata  # Undeclared upstream dependency
 
 about:
   home: https://dvc.org/
