--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -73,6 +73,7 @@ outputs:
         - networkx >=2.1
         - psutil >=5.8.0
         - pydot >=1.2.4
+        - speedcopy >=2.0.1  # [py<38 and win]
         - dataclasses ==0.7  # [py<37]
         - flatten-dict >=0.3.0,<1
         - tabulate >=0.8.7
@@ -191,7 +192,7 @@ outputs:
         - {{ pin_subpackage("dvc", exact=True) }}
         - oss2 >=2.11.0
         - importlib-metadata  # Undeclared upstream dependency
-	
+
   - name: dvc-ssh
     test:
       requires:
