--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -105,7 +105,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - gcsfs >=0.7.2
+        - gcsfs >=2021.5.0
 
   - name: dvc-gdrive
     test:
@@ -143,7 +143,8 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - boto3 >=1.9.201
+        - s3fs ==2021.5.0
+        - aiobotocore ==1.3.0
 
   - name: dvc-azure
     test:
@@ -162,7 +163,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - adlfs >=0.7.0
+        - adlfs >=0.7.1
         - azure-identity >=1.4.0
         - knack
 
