--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -145,6 +145,7 @@ outputs:
         - {{ pin_subpackage("dvc", exact=True) }}
         - s3fs ==2021.5.0
         - aiobotocore ==1.3.0
+        - boto3 >=1.9.201
 
   - name: dvc-azure
     test:
