--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -227,6 +227,25 @@ outputs:
         - {{ pin_subpackage("dvc", exact=True) }}
         - pyarrow >=0.17.1
 
+  - name: dvc-webdav
+    test:
+      requires:
+        - git
+        - pip
+      imports:
+        - dvc
+      commands:
+        - pip check
+        - dvc version
+        - dvc version | grep webdav
+    requirements:
+      host:
+        - python
+      run:
+        - python
+        - {{ pin_subpackage("dvc", exact=True) }}
+        - webdav4 >=0.8.2
+
   - name: dvc-webhdfs
     test:
       requires:
