--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -78,7 +78,7 @@ outputs:
         - importlib_metadata >=1.4  # [py<38]
         - flatten-dict >=0.3.0,<1
         - tabulate >=0.8.7
-        - pygtrie ==2.3.2
+        - pygtrie >=2.3.2
         - dpath >=2.0.1,<3
         - shtab >=1.3.4,<2
         - rich >=10.0.0
@@ -86,7 +86,7 @@ outputs:
         - python-benedict >=0.21.1
         - pyparsing ==2.4.7
         - typing_extensions >=3.7.4
-        - fsspec ==2021.6.1
+        - fsspec >=2021.6.1
         - diskcache >=5.2.1
 
   - name: dvc-gs
