--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -152,6 +152,7 @@ outputs:
       requires:
         - git
         - pip
+        - portalocker <2.0  # Temporary; see discussion around <https://github.com/conda-forge/dvc-feedstock/pull/234#issuecomment-907311619>
       imports:
         - dvc
       commands:
