--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -87,6 +87,7 @@ outputs:
         - pyparsing ==2.4.7
         - typing_extensions >=3.7.4
         - fsspec ==2021.8.1
+        - aiohttp-retry ==2.4.5
         - diskcache >=5.2.1
 
   - name: dvc-gs
