--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -207,7 +207,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - sshfs ==2021.9.0
+        - sshfs >=2021.8.1
 
   - name: dvc-hdfs
     test:
