--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -86,7 +86,7 @@ outputs:
         - python-benedict >=0.21.1
         - pyparsing ==2.4.7
         - typing_extensions >=3.10.0.2
-        - fsspec ==2021.10.0
+        - fsspec ==2021.10.1
         - aiohttp-retry ==2.4.5
         - diskcache >=5.2.1
 
@@ -107,7 +107,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - gcsfs ==2021.10.0
+        - gcsfs ==2021.10.1
 
   - name: dvc-gdrive
     test:
@@ -145,7 +145,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - s3fs ==2021.10.0
+        - s3fs ==2021.10.1
         - aiobotocore >1.0.1
         - boto3 >=1.9.201
 
@@ -167,7 +167,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - adlfs ==2021.9.1
+        - adlfs >=2021.9.1
         - azure-identity >=1.4.0
         - knack
 
@@ -188,7 +188,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - ossfs ==2021.8.0
+        - ossfs >=2021.8.0
 
   - name: dvc-ssh
     test:
