--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,7 +67,7 @@ outputs:
         - tqdm >=4.45.0,<5
         - packaging >=19.0
         - zc.lockfile >=1.2.1
-        - flufl.lock >=3.2,<4
+        - flufl.lock >=5
         - networkx >=2.5
         - psutil >=5.8.0
         - pydot >=1.2.4
