--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -105,7 +105,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - gcsfs ==2021.10.1
+        - gcsfs >=2021.10.1
 
   - name: dvc-gdrive
     test:
@@ -143,7 +143,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("dvc", exact=True) }}
-        - s3fs ==2021.10.1
+        - s3fs >=2021.10.1
         - aiobotocore >1.0.1
         - boto3 >=1.9.201
 
