--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
 # Of the build properties here and below:
 # number is propagated into the outputs below
 build:
-  number: 0
+  number: 1
   skip: true  # [py<=37 and win]
 
 
@@ -77,8 +77,7 @@ outputs:
         - shtab >=1.3.4,<2
         - rich >=10.13.0
         - dictdiffer >=0.8.1
-        - python-benedict >=0.24.2  # [py<39]
-        - python-benedict >=0.24.2,<0.25.0  # [py>38]
+        - python-benedict >=0.24.2
         - pyparsing ==2.4.7
         - typing_extensions >=3.7.4
         - fsspec >=2021.10.1
