--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -61,7 +61,7 @@ outputs:
         - funcy >=1.14
         - pathspec >=0.9.0,<0.10.0
         - shortuuid >=0.5.0
-        - tqdm >=4.45.0,<5
+        - tqdm >=4.63.1,<5
         - packaging >=19.0
         - zc.lockfile >=1.2.1
         - flufl.lock >=5
@@ -83,7 +83,8 @@ outputs:
         - fsspec >=2021.10.1
         - aiohttp-retry >=2.4.5
         - diskcache >=5.2.1
-        - scmrepo ==0.0.7
+        - scmrepo ==0.0.16
+        - dvc-render ==0.0.4
 
   - name: dvc-gs
     test:
