--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,6 +58,7 @@ outputs:
         - appdirs >=1.4.3
         - ruamel.yaml >=0.17.11
         - toml >=0.10.1
+        - tomlkit >=0.11.1
         - funcy >=1.14
         - pathspec >=0.9.0,<0.10.0
         - shortuuid >=0.5.0
