--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -77,7 +77,6 @@ outputs:
         - shtab >=1.3.4,<2
         - rich >=10.13.0
         - dictdiffer >=0.8.1
-        - python-benedict >=0.24.2
         - pyparsing ==2.4.7
         - typing_extensions >=3.7.4
         - fsspec >=2021.10.1
@@ -85,10 +84,10 @@ outputs:
         - diskcache >=5.2.1
         - scmrepo ==0.0.25
         - dvc-render ==0.0.9
-        - dvclive >=0.7.3
+        - dvclive >=0.10.0
         - dvc-data ==0.1.13
         - dvc-task ==0.1.2
-
+        - hydra-core >=1.1.0
   - name: dvc-gs
     test:
       requires:
