--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -85,7 +85,8 @@ outputs:
         - scmrepo ==0.0.25
         - dvc-render ==0.0.9
         - dvclive >=0.10.0
-        - dvc-data ==0.1.15
+        - dvc-data ==0.1.17
+        - dvc-http ==0.0.2
         - dvc-task ==0.1.2
         - hydra-core >=1.1.0
   - name: dvc-gs
