--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ outputs:
         - pip
       imports:
         - dvc
+        - dvc.repo.Repo
       commands:
         - pip check
         - dvc version
@@ -85,7 +86,7 @@ outputs:
         - scmrepo ==0.0.25
         - dvc-render ==0.0.9
         - dvclive >=0.10.0
-        - dvc-data ==0.1.15
+        - dvc-data ==0.1.22
         - dvc-http ==0.0.2
         - dvc-task ==0.1.2
         - hydra-core >=1.1.0
