--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,7 @@ outputs:
       commands:
         - pip check
         - dvc version
+        - dvc version | grep {{ version }}
         - 'dvc version | grep "Supports: http, https"'
 
     requirements:
