--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -82,8 +82,7 @@ test:
     - pip check
     - dvc version
     - dvc version | grep {{ version }}
-    - 'dvc version | grep "Supports: http, https"'
-
+    - dvc version | grep https
 
 about:
   home: https://dvc.org/
