--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -63,12 +63,13 @@ requirements:
     - aiohttp-retry >=2.4.5
     - diskcache >=5.2.1
     - scmrepo ==0.1.1
-    - dvc-render ==0.0.10
+    - dvc-render ==0.0.11
     - dvclive >=0.10.0
-    - dvc-data ==0.8.0
+    - dvc-data ==0.10.0
     - dvc-http ==2.19.1
     - dvc-task ==0.1.2
     - hydra-core >=1.1.0
+    - iterative-telemetry==0.0.5
 
 # Base package supports dvc, but only supports built-in remotes
 test:
