--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,7 +50,7 @@ requirements:
     - networkx >=2.5,<2.8.3
     - psutil >=5.8.0
     - pydot >=1.2.4
-    - importlib_resources >=5.2.2  # [py<39]
+    - importlib_resources >=5.2.2
     - flatten-dict >=0.4.1,<1
     - tabulate >=0.8.7
     - pygtrie >=2.3.2
