--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,19 +25,14 @@ requirements:
     - pip
   run:
     - python >=3.8
-    - ply >=3.9
     - colorama >=0.3.9
     - configobj >=5.0.6
-    - setuptools >=48
-    - nanotime >=0.5.2
-    - pyasn1 >=0.4.1
     - voluptuous >=0.11.7
     - requests >=2.22.0
     - grandalf ==0.6
     - distro >=1.3.0
     - appdirs >=1.4.3
     - ruamel.yaml >=0.17.11
-    - toml >=0.10.1
     - tomlkit >=0.11.1
     - funcy >=1.14
     - pathspec >=0.9.0,<0.10.0
@@ -46,7 +41,7 @@ requirements:
     - packaging >=19.0
     - zc.lockfile >=1.2.1
     - flufl.lock >=5
-    - networkx >=2.5,<2.8.3
+    - networkx >=2.5
     - psutil >=5.8.0
     - pydot >=1.2.4
     - importlib_resources >=5.2.2
@@ -56,16 +51,12 @@ requirements:
     - dpath >=2.0.2,<3
     - shtab >=1.3.4,<2
     - rich >=10.13.0
-    - dictdiffer >=0.8.1
-    - pyparsing ==2.4.7
+    - pyparsing >=2.4.7
     - typing_extensions >=3.7.4
-    - fsspec >=2021.10.1
-    - aiohttp-retry >=2.4.5
-    - diskcache >=5.2.1
     - scmrepo ==0.1.4
-    - dvc-render ==0.0.14
+    - dvc-render ==0.0.15
     - dvclive >=1.0.0
-    - dvc-data ==0.28.3
+    - dvc-data ==0.28.4
     - dvc-http ==2.27.2
     - dvc-task ==0.1.6
     - hydra-core >=1.1.0
