--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,13 +29,13 @@ requirements:
     - configobj >=5.0.6
     - voluptuous >=0.11.7
     - requests >=2.22.0
-    - grandalf ==0.6
+    - grandalf >=0.7,<1
     - distro >=1.3.0
     - appdirs >=1.4.3
     - ruamel.yaml >=0.17.11
     - tomlkit >=0.11.1
     - funcy >=1.14
-    - pathspec >=0.9.0,<0.10.0
+    - pathspec >=0.10.3
     - shortuuid >=0.5.0
     - tqdm >=4.63.1,<5
     - packaging >=19.0
@@ -53,14 +53,14 @@ requirements:
     - rich >=10.13.0
     - pyparsing >=2.4.7
     - typing_extensions >=3.7.4
-    - scmrepo ==0.1.5
-    - dvc-render ==0.0.17
+    - scmrepo ==0.1.7
+    - dvc-render ==0.1.0
+    - dvc-task ==0.1.11
     - dvclive >=1.2.2
-    - dvc-data ==0.28.5
+    - dvc-data ==0.37.8
     - dvc-http
-    - dvc-task ==0.1.9
     - hydra-core >=1.1.0
-    - iterative-telemetry ==0.0.6
+    - iterative-telemetry ==0.0.7
     - dvc-studio-client >=0.1.1
 
 # Base package supports dvc, but only supports built-in remotes
