--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - requests >=2.22.0
     - grandalf >=0.7,<1
     - distro >=1.3.0
-    - appdirs >=1.4.3
+    - platformdirs <4,>=3
     - ruamel.yaml >=0.17.11
     - tomlkit >=0.11.1
     - funcy >=1.14
