--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   entry_points:
     - dvc = dvc.main:main
   script:
@@ -23,6 +23,7 @@ requirements:
   host:
     - python >=3.8
     - pip
+    - setuptools_scm >=7
   run:
     - python >=3.8
     - colorama >=0.3.9
