--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,43 +25,41 @@ requirements:
     - pip
     - setuptools_scm >=7
   run:
-    - python >=3.8
     - colorama >=0.3.9
     - configobj >=5.0.6
-    - voluptuous >=0.11.7
-    - requests >=2.22.0
-    - grandalf >=0.7,<1
-    - distro >=1.3.0
-    - platformdirs <4,>=3.1.1
-    - ruamel.yaml >=0.17.11
-    - tomlkit >=0.11.1
-    - funcy >=1.14
-    - pathspec >=0.10.3
-    - shortuuid >=0.5.0
-    - tqdm >=4.63.1,<5
-    - packaging >=19.0
-    - zc.lockfile >=1.2.1
-    - flufl.lock >=5
-    - networkx >=2.5
-    - psutil >=5.8.0
-    - pydot >=1.2.4
-    - importlib_resources >=5.2.2
-    - flatten-dict >=0.4.1,<1
-    - tabulate >=0.8.7
-    - pygtrie >=2.3.2
-    - dpath >=2.0.2,<3
-    - shtab >=1.3.4,<2
-    - rich >=10.13.0
-    - pyparsing >=2.4.7
-    - typing_extensions >=3.7.4
-    - scmrepo <2,>=1.0.0
-    - dvc-render >=0.1.2
+    - distro >=1.3
+    - dpath >=2.1.0,<3
     - dvc-data >=0.47.1,<0.48
     - dvc-http >=2.29.0
-    - dvc-task >=0.2.0,<1
-    - hydra-core >=1.1.0
-    - iterative-telemetry >=0.0.7
+    - dvc-render >=0.3.1,<0.4.0
     - dvc-studio-client >=0.6.1,<1
+    - dvc-task >=0.2.0,<1
+    - flatten_dict >=0.4.1,<1
+    - flufl.lock >=5
+    - funcy >=1.14
+    - grandalf >=0.7,<1
+    - hydra-core >=1.1
+    - iterative-telemetry >=0.0.7
+    - networkx >=2.5
+    - packaging >=19
+    - pathspec >=0.10.3
+    - platformdirs >=3.1.1,<4
+    - psutil >=5.8
+    - pydot >=1.2.4
+    - pygtrie >=2.3.2
+    - pyparsing >=2.4.7
+    - python >=3.8
+    - requests >=2.22
+    - rich >=12
+    - ruamel.yaml >=0.17.11
+    - scmrepo >=1.0.0,<2
+    - shortuuid >=0.5
+    - shtab >=1.3.4,<2
+    - tabulate >=0.8.7
+    - tomlkit >=0.11.1
+    - tqdm >=4.63.1,<5
+    - voluptuous >=0.11.7
+    - zc.lockfile >=1.2.1
 
 # Base package supports dvc, but only supports built-in remotes
 test:
