--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ requirements:
     - dvc-render >=0.3.1,<0.4.0
     - dvc-studio-client >=0.6.1,<1
     - dvc-task >=0.2.0,<1
-    - flatten_dict >=0.4.1,<1
+    - flatten-dict >=0.4.1,<1
     - flufl.lock >=5
     - funcy >=1.14
     - grandalf >=0.7,<1
