--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,22 +28,22 @@ requirements:
     - colorama >=0.3.9
     - configobj >=5.0.6
     - distro >=1.3
-    - dpath >=2.1.0,<3
-    - dvc-data >=0.47.1,<0.48
+    - dpath <3,>=2.1.0
+    - dvc-data >=0.51.0,<0.52
     - dvc-http >=2.29.0
-    - dvc-render >=0.3.1,<0.4.0
-    - dvc-studio-client >=0.6.1,<1
-    - dvc-task >=0.2.0,<1
-    - flatten-dict >=0.4.1,<1
+    - dvc-render >=0.3.1,<1
+    - dvc-studio-client >=0.9.2,<1
+    - dvc-task >=0.2.1,<1
+    - flatten-dict <1,>=0.4.1
     - flufl.lock >=5
     - funcy >=1.14
-    - grandalf >=0.7,<1
+    - grandalf <1,>=0.7
     - hydra-core >=1.1
     - iterative-telemetry >=0.0.7
     - networkx >=2.5
     - packaging >=19
     - pathspec >=0.10.3
-    - platformdirs >=3.1.1,<4
+    - platformdirs <4,>=3.1.1
     - psutil >=5.8
     - pydot >=1.2.4
     - pygtrie >=2.3.2
@@ -54,10 +54,10 @@ requirements:
     - ruamel.yaml >=0.17.11
     - scmrepo >=1.0.0,<2
     - shortuuid >=0.5
-    - shtab >=1.3.4,<2
+    - shtab <2,>=1.3.4
     - tabulate >=0.8.7
     - tomlkit >=0.11.1
-    - tqdm >=4.63.1,<5
+    - tqdm <5,>=4.63.1
     - voluptuous >=0.11.7
     - zc.lockfile >=1.2.1
 
