--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -69,11 +69,14 @@ test:
   imports:
     - dvc
     - dvc.repo
+  source_files:
+    - tests
   commands:
     - pip check
     - dvc version
     - dvc version | grep {{ version }}
     - dvc version | grep https
+    - python -m pytest --verbose ./tests/
 
 about:
   home: https://dvc.org/
