--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ requirements:
     - dvc-studio-client >=0.9.2,<1
     - dvc-task >=0.3.0,<1
     - flatten-dict <1,>=0.4.1
-    - flufl.lock >=5
+    - flufl.lock >=5,<8
     - funcy >=1.14
     - grandalf <1,>=0.7
     - hydra-core >=1.1
